contracts/credit/tests/snapshots/auth_snap__withdraw_bounty_auth_snap.snap
---
source: contracts/credit/tests/auth_snap.rs
assertion_line: 611
expression: auths.last().unwrap()
---
(
    Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM),
    AuthorizedInvocation {
        function: Contract(
            (
                Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
                Symbol(withdraw_bounty),
                Vec(),
            ),
        ),
        sub_invocations: [],
    },
)
