contracts/credit/tests/snapshots/auth_snap__withdraw_treasury_auth_snap.snap
---
source: contracts/credit/tests/auth_snap.rs
assertion_line: 594
expression: auths.last().unwrap()
---
(
    Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM),
    AuthorizedInvocation {
        function: Contract(
            (
                Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
                Symbol(withdraw_treasury),
                Vec(),
            ),
        ),
        sub_invocations: [],
    },
)
